# HashMap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  a.out  hashtable.h  main.cpp
.github/workflows/: ci.yml
include/: hashtable.h
include/detail/: states.h
include/hashmap/: hashmap.h
tests/: hashmapTest.cpp  hashtableTest.cpp
